testdata/result/statement/bad_hint_select.sql.txt
--- bad_hint_select.sql
@ select 1

--- Error
syntax error: testdata/input/query/bad_hint_select.sql:1:3: expected token: {, but: SELECT

  1:  @ select 1
        ^~~~~~


--- AST
&ast.QueryStatement{
  Hint:  (*ast.Hint)(nil),
  With:  (*ast.With)(nil),
  Query: &ast.BadNode{
    NodePos: 0,
    NodeEnd: 10,
    Raw:     "@ select 1",
  },
}

--- SQL
@ select 1
